src/test/ui/feature-gates/underscore_const_names_feature_gate.stderr
error[E0658]: naming constants with `_` is unstable
  --> $DIR/underscore_const_names_feature_gate.rs:1:1
   |
LL | const _: () = ();
   | ^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/54912
   = help: add #![feature(underscore_const_names)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
